data/derived/comb/progs/unify/prog8952.ml.out
Characters 78-87:
  else [x] @ (clone x n-1);;
              ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
